refactor: moved official clusters

--- a/parse-results.ipynb
+++ b/parse-results.ipynb
@@ -18,29 +18,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "import yaml\n",
     "\n",
     "from collections import defaultdict\n",
-    "from copy import deepcopy"
+    "\n",
+    "from cr_racing_results import RaceResults"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "94864eab-187b-4df2-a1d4-44d811526551",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cr_racing_results import (\n",
-    "    RaceResults,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "e4021335-388a-4797-88d2-12833a81e0c1",
    "metadata": {},
    "outputs": [],
@@ -51,112 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "da7ce56b-9255-467a-a157-59d4a00ba00c",
+   "execution_count": 3,
+   "id": "0f118f7f-429c-402e-a688-1c08c4cacd41",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5347523d-f0b8-4cc5-a893-9bfe44b65623",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def load_official_clusters(clusters_path: Path | str) -> dict[str, tuple[str]]:\n",
+    "    with open(clusters_path, encoding='utf-8') as fp:\n",
+    "        clusters = yaml.safe_load(fp)\n",
+    "    official_clusters = defaultdict(tuple)\n",
+    "    for cluster, official_list in clusters.items():\n",
+    "        fixed_cluter = cluster.rstrip('+')\n",
+    "        official_clusters[fixed_cluter] = official_clusters[fixed_cluter] + tuple(official_list)\n",
+    "    return official_clusters"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ab24dd2a-787f-4e41-90e0-7e751b5e4b08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "\n",
-    "official_clusters = defaultdict(tuple)\n",
-    "\n",
-    "clusters_dir = Path(race_config['clusters'])\n",
-    "for file in list(clusters_dir.iterdir()):\n",
-    "    if file.name.startswith('.'):\n",
-    "        continue\n",
-    "    cluster = file.name.strip('+')\n",
-    "    with open(file) as fp:\n",
-    "        official_clusters[cluster] = official_clusters[cluster] + tuple(fp.read().split('\\n'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5bb216de-5ac9-4b6a-85d7-9fe33e8e34b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse_fixed_list(fixed_list: str) -> dict[str, int]:\n",
-    "    parsed = {}\n",
-    "    for entry in fixed_list.split('\\n'):\n",
-    "        n1, n2, year = entry.split()\n",
-    "        parsed[f'{n1} {n2}'] = int(year)\n",
-    "    return parsed\n",
-    "\n",
-    "A = \"\"\"Тихонин Евгений 1998\n",
-    "Березняк Александр 2001\n",
-    "Миланин Константин 1986\n",
-    "Морской Сергей 1977\n",
-    "Петроченко Михаил 1988\n",
-    "Рыбачук Андрей 1993\n",
-    "Холин Олег 1985\n",
-    "Христенко Максим 1993\"\"\"\n",
-    "\n",
-    "B = \"\"\"Усольцев Алексей 1999\n",
-    "Шарифуллин Эдуард 1989\n",
-    "Земляной Николай 1986\n",
-    "Катаев Дмитрий 1979\n",
-    "Корнев Борис 1956\n",
-    "Мазилов Сергей 1990\n",
-    "Савкин Павел 1975\"\"\"\n",
-    "\n",
-    "C = \"\"\"Горячев Вячеслав 1959\n",
-    "Домбровский Роман 1986\n",
-    "Лимаренко Олег 1979\"\"\"\n",
-    "\n",
-    "F = \"\"\"Александрова Виктория 1991\n",
-    "Большакова Апполинария 1996\n",
-    "Грицкова Оя 1980\n",
-    "Гуренкова Екатерина 1985\n",
-    "Захаркина Валерия 2001\n",
-    "Ингелевич Екатерина 1986\n",
-    "Капущова Ольга 1971\n",
-    "Кишова Алина 1988\n",
-    "Королёва Анастасия 1993\n",
-    "Крючкова Полина 1992\n",
-    "Ланцова Мария 1962\n",
-    "Ломовцева Мария 2001\n",
-    "Мартынова Елена 1973\n",
-    "Муратова Ольга 1988\n",
-    "Ноготкова Екатерина 1980\n",
-    "Полевая Юлия 1985\n",
-    "Рыбина Светлана 2006\n",
-    "Серикова Наталья 1988\n",
-    "Стрельцова Галина 1991\n",
-    "Флоринская Яна 1984\n",
-    "Черных Светлана 1992\n",
-    "Чунакова Наталья 1974\n",
-    "Шараева Анна 1999\n",
-    "Юрченко Александра 2007\"\"\"\n",
-    "\n",
-    "fixed_racers = {\n",
-    "    'A': parse_fixed_list(A),\n",
-    "    'B': parse_fixed_list(B),\n",
-    "    'C': parse_fixed_list(C),\n",
-    "    'F': parse_fixed_list(F),\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
    "id": "27482a69-1f58-434b-b0e7-52f594f7b1f6",
    "metadata": {},
    "outputs": [
@@ -164,37 +67,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [04:06<00:00, 82.08s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [03:34<00:00, 71.40s/it]\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "\n",
     "races = []\n",
     "cluster_distribution = None\n",
+    "official_clusters = {}\n",
     "for race in tqdm(race_config['races']):\n",
+    "    if 'clusters' in race:\n",
+    "        official_clusters = load_official_clusters(race['clusters'])\n",
     "    race = RaceResults.from_config(race, cluster_distribution, official_clusters)\n",
-    "    if race.name == 'Садовое кольцо':\n",
-    "        for cluster, fixes in fixed_racers.items():\n",
-    "            for racer, right_year in fixes.items():\n",
-    "                race.group[cluster].loc[race.group[cluster].name == racer, 'year_of_birth'] = right_year\n",
-    "                race.tt.loc[race.tt.name == racer, 'year_of_birth'] = right_year\n",
-    "        race.clusters = race.update_clusters(race.group, race.tt, cluster_distribution, official_clusters)\n",
-    "    elif race.name == 'Верея':\n",
-    "        race.group[cluster].loc[race.group[cluster].name == 'Нечаев Виктор', 'year_of_birth'] = 1994\n",
-    "        race.tt.loc[race.tt.name == 'Нечаев Виктор', 'year_of_birth'] = 1994\n",
     "    race.save(os.path.join('data', race.name))\n",
     "    cluster_distribution = race.clusters\n",
-    "    races.append(race)\n",
-    "races.sort(key=lambda race: race.order)"
+    "    races.append(race)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "b20c985f-a2ff-4666-8f32-fd717771bd1f",
    "metadata": {},
    "outputs": [],
@@ -211,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "f7ec8763-549b-401c-96e8-5fb64460dd4a",
    "metadata": {},
    "outputs": [],
@@ -230,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "aaed384f-fb78-4de0-82b8-12c6681ff138",
    "metadata": {},
    "outputs": [],
@@ -247,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "b1fef96e-596a-4dc4-9362-783b03e26f0d",
    "metadata": {},
    "outputs": [],
@@ -259,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "b2f2ed61-10fb-4055-ae09-282f472333f5",
    "metadata": {},
    "outputs": [
@@ -309,7 +201,7 @@
        "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>277</th>\n",
+       "      <th>281</th>\n",
        "      <td>Сальников Роман</td>\n",
        "      <td>1980</td>\n",
        "      <td>A</td>\n",
@@ -317,7 +209,7 @@
        "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>941</th>\n",
+       "      <th>973</th>\n",
        "      <td>Худиев Омар</td>\n",
        "      <td>1994</td>\n",
        "      <td>NaN</td>\n",
@@ -332,11 +224,11 @@
        "                name  year_of_birth Садовое кольцо Верея Дубна\n",
        "79      Карпов Антон           1979              A     A     B\n",
        "143  Дмитриев Андрей           1981              C     C     B\n",
-       "277  Сальников Роман           1980              A     A     B\n",
-       "941      Худиев Омар           1994            NaN     B     A"
+       "281  Сальников Роман           1980              A     A     B\n",
+       "973      Худиев Омар           1994            NaN     B     A"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,8 +414,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1cf2aecc-39ad-40e6-afa0-84f42b9b6b0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race = races[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "42a15bf4-29d7-4140-b463-b2f3f5dbe16d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bib</th>\n",
+       "      <th>name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>category</th>\n",
+       "      <th>status</th>\n",
+       "      <th>rank_abs</th>\n",
+       "      <th>result</th>\n",
+       "      <th>result_time</th>\n",
+       "      <th>team</th>\n",
+       "      <th>club</th>\n",
+       "      <th>year_of_birth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>370</td>\n",
+       "      <td>Земляной Николай</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М2</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>02:13:51.29</td>\n",
+       "      <td>8031.292</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>239</td>\n",
+       "      <td>Кузнецов Петр</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М3</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>02:13:53.92</td>\n",
+       "      <td>8033.922</td>\n",
+       "      <td>HBFS Plan B</td>\n",
+       "      <td>HBFS Plan B</td>\n",
+       "      <td>1980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>319</td>\n",
+       "      <td>Торкаченко Павел</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М1</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>02:13:54.85</td>\n",
+       "      <td>8034.852</td>\n",
+       "      <td>Магадан</td>\n",
+       "      <td>Магадан</td>\n",
+       "      <td>2006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>261</td>\n",
+       "      <td>Усольцев Алексей</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М1</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>02:13:55.01</td>\n",
+       "      <td>8035.013</td>\n",
+       "      <td>Legion Cycling Club</td>\n",
+       "      <td>Legion Cycling Club</td>\n",
+       "      <td>1999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>329</td>\n",
+       "      <td>Бакин Илья</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М2</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>02:13:55.15</td>\n",
+       "      <td>8035.153</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>401</td>\n",
+       "      <td>Сакович Антон</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М3</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>266</td>\n",
+       "      <td>Салямов Рамиль</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М5</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>404</td>\n",
+       "      <td>Станкин Андрей</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М4</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>508</td>\n",
+       "      <td>Стратилатов Александр</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М2</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>375</td>\n",
+       "      <td>Халмухамедов Валентин</td>\n",
+       "      <td>male</td>\n",
+       "      <td>М2</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1987</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>190 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     bib                   name gender category status  rank_abs       result  \\\n",
+       "0    370       Земляной Николай   male       М2      Q       1.0  02:13:51.29   \n",
+       "1    239          Кузнецов Петр   male       М3      Q       2.0  02:13:53.92   \n",
+       "2    319       Торкаченко Павел   male       М1      Q       3.0  02:13:54.85   \n",
+       "3    261       Усольцев Алексей   male       М1      Q       4.0  02:13:55.01   \n",
+       "4    329             Бакин Илья   male       М2      Q       5.0  02:13:55.15   \n",
+       "..   ...                    ...    ...      ...    ...       ...          ...   \n",
+       "185  401          Сакович Антон   male       М3    DNS       NaN         None   \n",
+       "186  266         Салямов Рамиль   male       М5    DNS       NaN         None   \n",
+       "187  404         Станкин Андрей   male       М4    DNS       NaN         None   \n",
+       "188  508  Стратилатов Александр   male       М2    DNS       NaN         None   \n",
+       "189  375  Халмухамедов Валентин   male       М2    DNS       NaN         None   \n",
+       "\n",
+       "     result_time                 team                 club  year_of_birth  \n",
+       "0       8031.292                 None                 None           1986  \n",
+       "1       8033.922          HBFS Plan B          HBFS Plan B           1980  \n",
+       "2       8034.852              Магадан              Магадан           2006  \n",
+       "3       8035.013  Legion Cycling Club  Legion Cycling Club           1999  \n",
+       "4       8035.153                 None                 None           1988  \n",
+       "..           ...                  ...                  ...            ...  \n",
+       "185          NaN                 None                 None           1981  \n",
+       "186          NaN                 None                 None           1973  \n",
+       "187          NaN                 None                 None           1977  \n",
+       "188          NaN                 None                 None           1985  \n",
+       "189          NaN                 None                 None           1987  \n",
+       "\n",
+       "[190 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "race.group['B']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f036448-d7b3-4c87-b182-a1357623ed2e",
    "metadata": {},
    "outputs": [],
    "source": []
