fix: fixed import errors after rafactor

--- a/notebooks/parse-results.ipynb
+++ b/notebooks/parse-results.ipynb
@@ -19,12 +19,18 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "from pathlib import Path\n",
+    "from collections import defaultdict\n",
+    "\n",
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "import yaml\n",
     "\n",
-    "from collections import defaultdict\n",
+    "cwd = Path.cwd()\n",
+    "if cwd.name == 'notebooks':\n",
+    "    os.chdir(cwd.parent)\n",
+    "sys.path.append('./scripts')\n",
     "\n",
     "from cr_racing_results import RaceResults"
    ]
@@ -36,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('races-config.yaml') as fp:\n",
+    "with open('race-results-config.yaml') as fp:\n",
     "    race_config = yaml.safe_load(fp)"
    ]
   },
@@ -67,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [03:34<00:00, 71.40s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [03:55<00:00, 78.65s/it]\n"
      ]
     }
    ],
